2011-01-10  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (texi2html History): move to texi2oldapi.texi
	archive file.

2011-01-09  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Other Configuration Variables): finish edit.

2011-01-03  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Other Configuration Variables): continue edit.

2011-01-01  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Other Configuration Variables): continue edit.

2010-12-31  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Tips and Hints): @insertcopying no longer
	recommended in Top node.  Discrepancy noted by Adrienne Thompson.

2010-12-23  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\scanmacro): use \empty instead of \endinput,
	since the actual meaning of \endinput turns out to have nothing to
	do with it.  Doc fixes.

2010-12-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Other Configuration Variables): continue.

2010-12-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Other Configuration Variables): continue.

2010-12-09  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Other Configuration Variables): begin reading.

2010-12-03  Karl Berry  <karl@gnu.org>

	* makeinfo/tests/*: uniformly set LC_ALL, unset LANG, LANGUAGE,
	TEXINFO_OUTPUT.  Report from Ryan Hill, 19 Sep 2010 12:22:20,
	http://savannah.gnu.org/bugs/?31068.

2010-12-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* info/man.c (get_manpage_node): Avoid null pointer dereference
	of info_windows.

2010-12-03  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Configuration Variables and Options),
	(Configuration Variables for @@-Commands): rename+edit.

2010-12-02  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (texi2any Configuration Variables): rather than
	makeinfo, I guess.
	(Other Configuration Variables): Split off into new node.

2010-12-01  Patrice Dumas  <pertusus@free.fr>

	* texi2html/texi2html.pl: don't warn when a user-defined macro
	without argument is called without braces.  Report from Werner 